@startuml

title __SOCIALNET's Class Diagram__\n

    namespace com.example.socialnet {
      class com.example.socialnet.Controller {
          + currentStatus : Label
          + favoriteQuote : Label
          + friendLabel : TextField
          + listView : ListView
          + nameField : TextField
          + nameLabel : Label
          + pictureLabel : TextField
          + pictureView : ImageView
          + quoteLabel : TextField
          + statusChangeLabel : TextField
          + statusLabel : Label
          + unfriendLabel : TextField
          ~ friendList : ObservableList<String>
          - currentProfile : String
          - friendArray : ArrayList<String>
          # handleAdd()
          # handleAddFriend()
          # handleDelete()
          # handleLookup()
          # handlePicture()
          # handleQuote()
          # handleStatus()
          # handleUnfriend()
          # initialize()
      }
    }
  

    namespace com.example.socialnet {
      class com.example.socialnet.Main {
          {static} + main()
          + start()
      }
    }

  

    namespace com.example.socialnet {
      class com.example.socialnet.SocialNetList {
          {static} - socNetList : ArrayList<SocialNetUsers>
          + SocialNetList()
          + addName()
          + getUser()
          + isDuplicateName()
          + remove()
          + searchUser()
      }
    }
  

    namespace com.example.socialnet {
      class com.example.socialnet.SocialNetUsers {
          - friends : String
          - name : String
          - picture : String
          - quote : String
          - status : String
          + SocialNetUsers()
          + getFriends()
          + getName()
          + getPicture()
          + getQuote()
          + getStatus()
          + setFriends()
          + setName()
          + setPicture()
          + setQuote()
          + setStatus()
      }
    }
  

  com.example.socialnet.Controller o-- com.example.socialnet.SocialNetList : socNetList
  com.example.socialnet.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
